# poseidon

./: .gitignore  CMakeLists.txt  README.md  benchmark_runner.py  benchmark_runner_ckks.py  benchmark_runner_dag_24_48.py  benchmark_runner_dag_breakpoint.py  build.sh  hedag  hedag_pipeline  hedag_trident  hedag_web  run.sh  run_dag_breakpoint_experiments.sh
bench/: CMakeLists.txt  bench.cpp  bench.h  bfv.cpp  bgv.cpp  ckks.cpp  keygen.cpp  ntt.cpp
bench/cmake/: ExternalBenchmark.cmake
cmake/: EnableCXX17.cmake  ExternalGTest.cmake  ExternalIntelHEXL.cmake  ExternalSpdlog.cmake  ExternalZLIB.cmake  ExternalZSTD.cmake  PoseidonConfig.cmake.in  PoseidonMacros.cmake
dag_breakpoint_results_20260425_153609/: logical_best_points.csv  logical_raw.csv  logical_report.txt  logical_summary.csv  physical_best_points.csv  physical_raw.csv  physical_report.txt  physical_summary.csv
dag_breakpoint_results_20260425_183834/: logical_best_points.csv  logical_raw.csv  logical_report.txt  logical_summary.csv  physical_best_points.csv  physical_raw.csv  physical_report.txt  physical_summary.csv
docs/: CKKS_DAG_MANUAL_PARALLEL.md  (+2 more)
examples/bfv/: Athena.cpp  CMakeLists.txt  test_bfv_add.cpp  test_bfv_basic.cpp  test_bfv_mult_matrix.cpp  test_bfv_multiply_hardware  test_bfv_multiply_hardware.cpp  test_bfv_multiply_software  test_bfv_multiply_software.cpp  test_bfv_recryption.cpp  test_bfv_recryption_maps.cpp  test_bfv_time.cpp  test_bgv_multiply_hardware.cpp  test_bgv_multiply_software.cpp  test_ckks_multiply_hardware.cpp  test_ckks_multiply_software.cpp  test_multiply_hard.cpp
examples/bgv/: CMakeLists.txt  test_bgv_apply_galois.cpp  test_bgv_basic.cpp  test_bgv_basic_feiteng.cpp  test_bgv_bootstrap.cpp  test_bgv_load.cpp  test_bgv_multiply_rescale.cpp  test_bgv_recryption.cpp  test_bgv_time.cpp
examples/ckks/: CMakeLists.txt  benchmark_dag_evaluation.sh  ckks_lrtrain_opt.cpp  knn.cpp  knn_test.cpp  predictions.jsonl  test.cpp  test_ckks_advance_cpu.cpp  test_ckks_advance_cpu_16384.cpp  test_ckks_advance_cpu_32768.cpp  test_ckks_advance_cpu_8192.cpp  test_ckks_advance_hpu.cpp  test_ckks_advance_hpu_16384.cpp  test_ckks_advance_hpu_32768.cpp  test_ckks_advance_mlu.cpp  test_ckks_basic.cpp  test_ckks_basic_cpu.cpp  test_ckks_basic_cpu_16384.cpp  test_ckks_basic_cpu_32768.cpp  test_ckks_basic_feiteng.cpp  test_ckks_basic_houmo.cpp  test_ckks_basic_hpu.cpp  test_ckks_basic_hpu_16384.cpp  test_ckks_basic_hpu_32768.cpp  test_ckks_basic_mlu.cpp  test_ckks_basic_new.cpp  test_ckks_benchmarks.cpp  test_ckks_bootstrap.cpp  test_ckks_dag_24_common.h  test_ckks_dag_48_common.h  test_ckks_dag_common.h  test_ckks_dag_manual_parallel.cpp  test_ckks_dag_manual_parallel_24.cpp  test_ckks_dag_manual_parallel_48.cpp  test_ckks_dag_omp_hierarchical.cpp  test_ckks_dag_single_thread.cpp  test_ckks_dag_single_thread_24_parallel.cpp  test_ckks_dag_single_thread_48_parallel.cpp  test_ckks_dpdk.cpp  test_ckks_evalmod_poly_probe.cpp  (+17 more)
examples/ckks/test_backup/: test_ckks_advance_mlu_8192.cpp  test_ckks_basic_cpu_4096.cpp  test_ckks_infer_mlxu_32768.cpp
src/houmo/: CMakeLists.txt
src/poseidon/: CMakeLists.txt  batchencoder.cpp  ciphertext.cpp  ciphertext.h  ckks_encoder.cpp  ckks_encoder.h  crt_context.cpp  crt_context.h  decryptor.cpp  encryptor.cpp  encryptor.h  houmo_simulator.h  keygenerator.cpp  keygenerator.h  parameters_literal.cpp  parameters_literal.h  plaintext.cpp  plaintext.h  poseidon_context.cpp  poseidon_context.h  recryption.cpp  recryption.h  recryption_bgv_port_notes.md  rns_poly.cpp
src/poseidon/advance/: CMakeLists.txt  bootstrapper.cpp  bootstrapper.h  homomorphic_dft.cpp  homomorphic_dft.h  homomorphic_linear_transform.h  homomorphic_mod.cpp  homomorphic_mod.h  polynomial_evaluation.cpp  polynomial_evaluation.h
src/poseidon/advance/util/: CMakeLists.txt  chebyshev_interpolation.h  cosine_approx.cpp
src/poseidon/basics/: CMakeLists.txt  dynarray.h  memorymanager.cpp  memorymanager.h  modulus.cpp  modulus.h  randomgen.cpp  randomgen.h  randomtostd.h  serializable.h  serialization.cpp  serialization.h  version.h
src/poseidon/basics/util/: CMakeLists.txt  blake2.h  blake2b.c  clang.h  clipnormal.cpp  clipnormal.h  common.cpp  common.h  croots.cpp  croots.h  defines.h  dwthandler.h  fips202.c  fips202.h  galois.cpp  galois.h  gcc.h  globals.cpp  globals.h  hash.cpp  hash.h  hestdparms.h  iterator.cpp  iterator.h  locks.h  mempool.cpp  mempool.h  msvc.h  ntt.cpp  ntt.h  numth.cpp  numth.h  pointer.h  polyarithsmallmod.cpp  polyarithsmallmod.h  polycore.h  rlwe.cpp  rlwe.h  rns.cpp  rns.h  (+14 more)
src/poseidon/cambricon/: CMakeLists.txt  cambricon_api.cpp  cambricon_api.h
src/poseidon/evaluator/: CMakeLists.txt  bgv_bootstrap.cpp  bgv_bootstrap.h  bgv_digit_extraction.cpp  bgv_digit_extraction.h  bgv_raw_mod_switch.cpp  bgv_raw_mod_switch.h  bgv_recryption_data.cpp  bgv_recryption_data.h  evaluator_base.cpp  evaluator_base.h  evaluator_bfv_base.cpp  evaluator_bfv_base.h  evaluator_bgv_base.cpp  evaluator_bgv_base.h  evaluator_ckks_base.cpp  evaluator_ckks_base.h
src/poseidon/evaluator/software/: CMakeLists.txt  evaluator_bfv_software.cpp  evaluator_bfv_software.h  evaluator_bgv_software.cpp  evaluator_bgv_software.h  evaluator_ckks_software.cpp  evaluator_ckks_software.h
src/poseidon/factory/: CMakeLists.txt  poseidon_factory.cpp  poseidon_factory.h
src/poseidon/houmo/: CMakeLists.txt  houmo_api.cpp  houmo_api.h
src/poseidon/key/: CMakeLists.txt  bootstrapping_key.h  galoiskeys.cpp  galoiskeys.h  keys.h  keyswitch.h  keyswitch_base.cpp  keyswitch_base.h  keyswitch_bv.cpp  keyswitch_bv.h  keyswitch_ghs.cpp  keyswitch_ghs.h  keyswitch_hybrid.cpp  keyswitch_hybrid.h  kswitchkeys.cpp  kswitchkeys.h  publickey.h  relinkeys.h  secretkey.h
src/poseidon/util/: CMakeLists.txt  Logger.cpp  Logger.h  config.h.in  debug.cpp  debug.h  defines.h  examples.h  exception.h  fft.cpp  fft.h  ffthandler.h  json.h  matrix_operation.cpp  matrix_operation.h  omp_trace.cpp  omp_trace.h  precision.cpp  random_sample.cpp  random_sample.h  regevEncryption.h  rns_tool_qp.cpp  rns_tool_qp.h  thread_pool.h
(+906 files in other folders)
