cmake_minimum_required(VERSION 3.12)

add_executable(test_bfv_basic test_bfv_basic.cpp)
target_link_libraries(test_bfv_basic poseidon_shared)

add_executable(test_bfv_mult_matrix test_bfv_mult_matrix.cpp)
target_link_libraries(test_bfv_mult_matrix poseidon_shared)

add_executable(test_bfv_time test_bfv_time.cpp)
target_link_libraries(test_bfv_time poseidon_shared)