cmake_minimum_required(VERSION 3.12)

#test bgv test_bgv_multiply_rescale
add_executable(test_bgv_multiply_rescale test_bgv_multiply_rescale.cpp)
target_link_libraries(test_bgv_multiply_rescale poseidon_shared)


#test bgv test_bgv_basic
add_executable(test_bgv_basic test_bgv_basic.cpp)
target_link_libraries(test_bgv_basic poseidon_shared)
