cmake_minimum_required(VERSION 3.12)

add_executable(test_ckks_basic test_ckks_basic.cpp)
target_link_libraries(test_ckks_basic poseidon_shared)

add_executable(test_ckks_bootstrap test_ckks_bootstrap.cpp)
target_link_libraries(test_ckks_bootstrap poseidon_shared)

add_executable(test_ckks_evaluate_poly_vector test_ckks_evaluate_poly_vector.cpp)
target_link_libraries(test_ckks_evaluate_poly_vector poseidon_shared)

add_executable(test_ckks_heartstudy test_ckks_heartstudy.cpp)
target_link_libraries(test_ckks_heartstudy poseidon_shared)

add_executable(test_ckks_multiply_matrix_bsgs test_ckks_multiply_matrix_bsgs.cpp)
target_link_libraries(test_ckks_multiply_matrix_bsgs poseidon_shared)

add_executable(test_ckks_multiply_matrix_bsgs_multi_thread test_ckks_multiply_matrix_bsgs_multi_thread.cpp)
target_link_libraries(test_ckks_multiply_matrix_bsgs_multi_thread poseidon_shared)

add_executable(test_ckks_slot_to_coeff test_ckks_slot_to_coeff.cpp)
target_link_libraries(test_ckks_slot_to_coeff poseidon_shared)

add_executable(test_ckks_basic_mlu test_ckks_basic_mlu.cpp)
target_link_libraries(test_ckks_basic_mlu poseidon_shared)

add_executable(test_ckks_time test_ckks_time.cpp)
target_link_libraries(test_ckks_time poseidon_shared)

add_executable(knn knn.cpp)
target_link_libraries(knn poseidon_shared)