file(GLOB POSEIDON_ALL_SOURCE_FILES "*.cpp" "*.c")
set(POSEIDON_SOURCE_FILES ${POSEIDON_ALL_SOURCE_FILES}
)

file(GLOB POSEIDON_ALL_HRADER_FILES "*.h")
install (FILES ${POSEIDON_ALL_HRADER_FILES}
    DESTINATION
        ${POSEIDON_INCLUDES_INSTALL_DIR}/houmo/
)

set(POSEIDON_SOURCE_FILES ${POSEIDON_SOURCE_FILES} PARENT_SCOPE)
