file(GLOB POSEIDON_CAMBRICON_SOURCE_FILES "*.cpp" "*.c")
set(POSEIDON_SOURCE_FILES  ${POSEIDON_SOURCE_FILES} 
        ${POSEIDON_CAMBRICON_SOURCE_FILES}
)


# Add header files for installation
file(GLOB POSEIDON_CAMBRICON_HRADER_FILES "*.h")
install (
    FILES
        ${POSEIDON_CAMBRICON_HRADER_FILES}
    DESTINATION
        ${POSEIDON_INCLUDES_INSTALL_DIR}/poseidon/cambricon
)

set(POSEIDON_SOURCE_FILES ${POSEIDON_SOURCE_FILES} PARENT_SCOPE)

