file(GLOB POSEIDON_HOUMO_SOURCE_FILES "*.cpp" "*.c")
set(POSEIDON_SOURCE_FILES  ${POSEIDON_SOURCE_FILES} 
        ${POSEIDON_HOUMO_SOURCE_FILES}
)



# Add header files for installation
file(GLOB POSEIDON_HOUMO_HRADER_FILES "*.h")
install (
    FILES
        ${POSEIDON_HOUMO_HRADER_FILES}
    DESTINATION
        ${POSEIDON_INCLUDES_INSTALL_DIR}/poseidon/houmo
)

set(POSEIDON_SOURCE_FILES ${POSEIDON_SOURCE_FILES} PARENT_SCOPE)

